[package]
name = "id"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
derive_more = "2.0.1"
prost = "0.14.1"
sea-orm = { version = "1.1.6", default-features = false, features = [
  "with-chrono",
  "with-uuid",
] }
serde = "1.0.219"
sqlx = { version = "0.8.3", default-features = false }
thiserror = "2.0.12"
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.17.0", features = ["js", "serde", "v4", "v7"] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }


[features]

sqlite = []

postgres = []
